Oauth, Vocabulary
- Oath: provided OAuth authorization with JWT token
- Some improvements for Vocabulary